// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DialogReplyInput - Snapshots > matches snapshot in default state 1`] = `
<div
  class="relative"
>
  <div
    class="border border-dashed border-input rounded-md relative"
  >
    <div
      class="flex flex-col gap-4 p-6"
    >
      <div
        class="flex items-start justify-between w-full"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            data-size="default"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              SN
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <span
              class="text-base leading-6 font-bold text-foreground"
            >
              Snapshot User
            </span>
            <span
              class="text-xs leading-4 font-medium tracking-[0.075em] uppercase text-muted-foreground"
            >
              @test-use
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex gap-1 items-start w-full"
      >
        <div
          class="flex-1"
        >
          <textarea
            class="min-h-6 border-none bg-transparent p-0 text-base leading-6 font-medium text-secondary-foreground focus-visible:ring-0 focus-visible:ring-offset-0 resize-none shadow-none"
            data-testid="textarea"
            placeholder="Write a reply..."
          />
        </div>
      </div>
      <div
        class="flex flex-wrap items-center justify-between gap-4 w-full"
      >
        <div
          data-testid="post-tags-list"
        >
          <button
            data-testid="add-tag-button"
          >
            +
          </button>
        </div>
        <div
          class="flex gap-2 items-center justify-end"
        >
          <button
            aria-label="Add emoji"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-emoji"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-smile size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M8 14s1.5 2 4 2 4-2 4-2"
              />
              <line
                x1="9"
                x2="9.01"
                y1="9"
                y2="9"
              />
              <line
                x1="15"
                x2="15.01"
                y1="9"
                y2="9"
              />
            </svg>
          </button>
          <button
            aria-label="Add image"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-image"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-image size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <circle
                cx="9"
                cy="9"
                r="2"
              />
              <path
                d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
              />
            </svg>
          </button>
          <button
            aria-label="Add file"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-file"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-paperclip size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.234 20.252 21 12.3"
              />
              <path
                d="m16 6-8.414 8.586a2 2 0 0 0 0 2.828 2 2 0 0 0 2.828 0l8.414-8.586a4 4 0 0 0 0-5.656 4 4 0 0 0-5.656 0l-8.415 8.585a6 6 0 1 0 8.486 8.486"
              />
            </svg>
          </button>
          <button
            aria-label="Add article"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-article"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-newspaper size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 18h-5"
              />
              <path
                d="M18 14h-8"
              />
              <path
                d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
              />
              <rect
                height="4"
                rx="1"
                width="8"
                x="10"
                y="6"
              />
            </svg>
          </button>
          <button
            aria-label="Post reply"
            class="h-8 px-3 py-2 rounded-full border-none opacity-40"
            data-testid="button-post-reply"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-send size-4 text-secondary-foreground mr-1.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
              />
              <path
                d="m21.854 2.147-10.94 10.939"
              />
            </svg>
            <span
              class="text-xs font-bold leading-4 text-secondary-foreground"
            >
              Post
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogReplyInput - Snapshots > matches snapshot with user details 1`] = `
<div
  class="relative"
>
  <div
    class="border border-dashed border-input rounded-md relative"
  >
    <div
      class="flex flex-col gap-4 p-6"
    >
      <div
        class="flex items-start justify-between w-full"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            data-size="default"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            >
              TE
            </div>
          </div>
          <div
            class="flex flex-col"
          >
            <span
              class="text-base leading-6 font-bold text-foreground"
            >
              Test User
            </span>
            <span
              class="text-xs leading-4 font-medium tracking-[0.075em] uppercase text-muted-foreground"
            >
              @test-use
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex gap-1 items-start w-full"
      >
        <div
          class="flex-1"
        >
          <textarea
            class="min-h-6 border-none bg-transparent p-0 text-base leading-6 font-medium text-secondary-foreground focus-visible:ring-0 focus-visible:ring-offset-0 resize-none shadow-none"
            data-testid="textarea"
            placeholder="Write a reply..."
          />
        </div>
      </div>
      <div
        class="flex flex-wrap items-center justify-between gap-4 w-full"
      >
        <div
          data-testid="post-tags-list"
        >
          <button
            data-testid="add-tag-button"
          >
            +
          </button>
        </div>
        <div
          class="flex gap-2 items-center justify-end"
        >
          <button
            aria-label="Add emoji"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-emoji"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-smile size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M8 14s1.5 2 4 2 4-2 4-2"
              />
              <line
                x1="9"
                x2="9.01"
                y1="9"
                y2="9"
              />
              <line
                x1="15"
                x2="15.01"
                y1="9"
                y2="9"
              />
            </svg>
          </button>
          <button
            aria-label="Add image"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-image"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-image size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <circle
                cx="9"
                cy="9"
                r="2"
              />
              <path
                d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
              />
            </svg>
          </button>
          <button
            aria-label="Add file"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-file"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-paperclip size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.234 20.252 21 12.3"
              />
              <path
                d="m16 6-8.414 8.586a2 2 0 0 0 0 2.828 2 2 0 0 0 2.828 0l8.414-8.586a4 4 0 0 0 0-5.656 4 4 0 0 0-5.656 0l-8.415 8.585a6 6 0 1 0 8.486 8.486"
              />
            </svg>
          </button>
          <button
            aria-label="Add article"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-article"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-newspaper size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 18h-5"
              />
              <path
                d="M18 14h-8"
              />
              <path
                d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
              />
              <rect
                height="4"
                rx="1"
                width="8"
                x="10"
                y="6"
              />
            </svg>
          </button>
          <button
            aria-label="Post reply"
            class="h-8 px-3 py-2 rounded-full border-none opacity-40"
            data-testid="button-post-reply"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-send size-4 text-secondary-foreground mr-1.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
              />
              <path
                d="m21.854 2.147-10.94 10.939"
              />
            </svg>
            <span
              class="text-xs font-bold leading-4 text-secondary-foreground"
            >
              Post
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DialogReplyInput - Snapshots > matches snapshot without user details 1`] = `
<div
  class="relative"
>
  <div
    class="border border-dashed border-input rounded-md relative"
  >
    <div
      class="flex flex-col gap-4 p-6"
    >
      <div
        class="flex items-start justify-between w-full"
      >
        <div
          class="flex items-center gap-3"
        >
          <div
            data-size="default"
            data-testid="avatar"
          >
            <img
              alt=""
              data-testid="avatar-image"
            />
            <div
              data-testid="avatar-fallback"
            />
          </div>
          <div
            class="flex flex-col"
          >
            <span
              class="text-base leading-6 font-bold text-foreground"
            >
              User
            </span>
            <span
              class="text-xs leading-4 font-medium tracking-[0.075em] uppercase text-muted-foreground"
            >
              @test-use
            </span>
          </div>
        </div>
      </div>
      <div
        class="flex gap-1 items-start w-full"
      >
        <div
          class="flex-1"
        >
          <textarea
            class="min-h-6 border-none bg-transparent p-0 text-base leading-6 font-medium text-secondary-foreground focus-visible:ring-0 focus-visible:ring-offset-0 resize-none shadow-none"
            data-testid="textarea"
            placeholder="Write a reply..."
          />
        </div>
      </div>
      <div
        class="flex flex-wrap items-center justify-between gap-4 w-full"
      >
        <div
          data-testid="post-tags-list"
        >
          <button
            data-testid="add-tag-button"
          >
            +
          </button>
        </div>
        <div
          class="flex gap-2 items-center justify-end"
        >
          <button
            aria-label="Add emoji"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-emoji"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-smile size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M8 14s1.5 2 4 2 4-2 4-2"
              />
              <line
                x1="9"
                x2="9.01"
                y1="9"
                y2="9"
              />
              <line
                x1="15"
                x2="15.01"
                y1="9"
                y2="9"
              />
            </svg>
          </button>
          <button
            aria-label="Add image"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-image"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-image size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                height="18"
                rx="2"
                ry="2"
                width="18"
                x="3"
                y="3"
              />
              <circle
                cx="9"
                cy="9"
                r="2"
              />
              <path
                d="m21 15-3.086-3.086a2 2 0 0 0-2.828 0L6 21"
              />
            </svg>
          </button>
          <button
            aria-label="Add file"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-file"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-paperclip size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M13.234 20.252 21 12.3"
              />
              <path
                d="m16 6-8.414 8.586a2 2 0 0 0 0 2.828 2 2 0 0 0 2.828 0l8.414-8.586a4 4 0 0 0 0-5.656 4 4 0 0 0-5.656 0l-8.415 8.585a6 6 0 1 0 8.486 8.486"
              />
            </svg>
          </button>
          <button
            aria-label="Add article"
            class="h-8 px-3 py-2 rounded-full border-none"
            data-testid="button-add-article"
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-newspaper size-4 text-secondary-foreground"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15 18h-5"
              />
              <path
                d="M18 14h-8"
              />
              <path
                d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-4 0v-9a2 2 0 0 1 2-2h2"
              />
              <rect
                height="4"
                rx="1"
                width="8"
                x="10"
                y="6"
              />
            </svg>
          </button>
          <button
            aria-label="Post reply"
            class="h-8 px-3 py-2 rounded-full border-none opacity-40"
            data-testid="button-post-reply"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-send size-4 text-secondary-foreground mr-1.5"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
              />
              <path
                d="m21.854 2.147-10.94 10.939"
              />
            </svg>
            <span
              class="text-xs font-bold leading-4 text-secondary-foreground"
            >
              Post
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
